src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "~@flaticon/flaticon-uicons/css/all/all";

/* Preline UI */
@import "../node_modules/preline/variants.css";

/* Plugins */
/* @plugin "@tailwindcss/forms"; */

html {
  width: 100%;
  height: 100%;
  /* background: #f0f2f5; */
}
#root {
  width: 100%;
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
  margin: 0;
  color: '#092A41';
  font-family: 'Inter', sans-serif;
  /* Use Inter as the primary font */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  letter-spacing: .01px;
  box-sizing: border-box;
}

code {
  font-family: source-code-pro, 'Courier New';
    /* monospace; */
}

.font-custom {
  font-family: "Plus Jakarta Sans", serif;
  font-optical-sizing: auto;
  /* font-weight: <weight>; */
  font-style: normal;
  /* letter-spacing: -0.01em; */
}

.font-cursive {
  font-family: "Playwrite US Trad", cursive;
  font-optical-sizing: auto;
  font-style: normal;
}


.font-inter {
  font-family: "Inter";
  font-optical-sizing: auto;
  /* font-weight: <weight>; */
  font-style: normal;
  /* letter-spacing: -0.01em; */
}

.rotated-text {
  transform: rotate(180deg);
  writing-mode: vertical-lr;
  /* text-orientation: upright; */
}

.border-left-dotted {
  position: relative;
}

.border-left-dotted::before {
  content: "";
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: -10px;
  width: 2px;
  height: 100%;
  background-color: #ccc;
  border-style: dotted;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

/* Minimal-width scrollbar */
.scrollbar-minimal {
  scrollbar-width: thin;
  /* For Firefox */
  scrollbar-color: #EEEEEE transparent;
  /* Thumb and track colors */
}

.scrollbar-minimal::-webkit-scrollbar {
  width: 2px;
  /* Width of the scrollbar for vertical scroll */
  height: 4px;
  /* Height of the scrollbar for horizontal scroll */
}

.scrollbar-minimal::-webkit-scrollbar-thumb {
  background: #EEEEEE;
  /* Thumb color */
  border-radius: 8px;
  /* Rounded corners for thumb */
}

.scrollbar-minimal::-webkit-scrollbar-track {
  background: transparent;
  /* Transparent track */
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-fadeIn {
  animation: fadeIn 1s ease-out;
}

@keyframes slideIn {
  from {
    opacity: 0;
    transform: translateX(-50px);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.animate-slideIn {
  animation: slideIn 1s ease-out;
}

.clip-trapezium-left {
  clip-path: polygon(5% 0%, 100% 0%, 100% 100%, 0% 100%);
  margin-left: 1px;
}

.clip-trapezium-both {
  clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
  margin-left: -10px;
  margin-right: -10px;
}

.clip-trapezium-right {
  clip-path: polygon(0% 0%, 100% 0%, 95% 100%, 0% 100%);
  margin-right: 1px;
}

/* Style for sections */
section {
  /* height: 100vh; */
  scroll-snap-align: start; /* Optional: Adds a snap effect */
}


.flip-card {
  perspective: 1000px;
}
.flip-card-inner {
  transition: transform 0.6s;
  transform-style: preserve-3d;
}
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}
.flip-card-front,
.flip-card-back {
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
.flip-card-back {
  transform: rotateY(180deg);
}

.iframe-container {
  position: relative;
  width: 100%;
  height: 100%;
  /* padding-top: 75%; Aspect ratio (4:3 = 75%, 16:9 = 56.25%) */
  overflow: hidden;
  border: 1px solid #ddd;
  border-radius: 8px;
}

.iframe-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 1280px;
  height: 720px;
  border: none;
}

